Changelog
=========

2.1.7 (unreleased)
------------------

- ContainerModified event is excluded from 'modified' event handling.
  This avoids for example adding a comment to lauch 'Modified' rules registered for it.
  [thomasdesvenain]

- Added an option in email action
  to exclude user who did the action from recipients.
  [thomasdesvenain]


2.1.6 (2012-07-02)
------------------

- Avoid hard dependency on Archetypes.
  [davisagli]

- Fixed portaltype condition made
  type creation fail in portal_types.
  [thomasdesvenain]

- Don't trigger modified actions if the event was
  for adding or removing content. Fixes #12461
  [do3cc]

- Logger action: Default values that make sense
  for "Logger name" (Plone) and "Logging level" (20).
  [kleist]


2.1.5 (2012-04-15)
------------------

- Fixed <link /> element wasn't closed in controlpanel.
  [mjpieters]

2.1.4 (2012-01-04)
------------------

- Fix missing CMF Permissions declaration in ZCML declaration (Julien Stegle)
  [encolpe]

- Fixed wrong error plone message after a failure on a delete content rule.
  [thomasdesvenain]

2.1.3 - 2011-06-19
------------------

- Fixed i18n regression caused by the pep8 cleanup.
  [vincentfretin]


2.1.2 - 2011-05-12
------------------

- If email content rule 'From' field interpolation gives empty string,
  from is site from address.
  [thomasdesvenain]

- Import IEndRequestEvent from zope.publisher instead of zope.app.publication
  [davisagli]

- Rules execution filter is no more based on event context,
  but in rule assignment context.
  This allows the same rule to be executed on different objects during the same request,
  including during the same test.
  [thomasdesvenain]

- Fixed: When two or more objects are initialized during the same request,
  'Object added' content rule handler is executed only once.
  Refs https://dev.plone.org/plone/ticket/11706.
  [thomasdesvenain]

- Add MANIFEST.in.
  [WouterVH]

- Internationalization fix on local rules management screen.